--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
   color: white;
 }
 .title {
+  margin:0;
   background-image: url('c.png'); 
   padding: 20px;
   width: 100%;
@@ -108,3 +109,4 @@ body {
     
 } */
 }
+
